Bug fixes on iOS and various release preparation

--- a/www/scss/ios-overrides.scss
+++ b/www/scss/ios-overrides.scss
@@ -155,8 +155,8 @@
   content: none !important;
 }
 
-.nollning-navbar {
-  opacity: 0;
+#chantbook-list {
+  margin-top: 0;
 }
 
 a.message-send-button {
@@ -173,4 +173,12 @@ a.message-send-button:active {
 
 .photo-browser-page .navbar, .photo-browser-page .toolbar {
   background-color: rgba(30, 30, 30, 0.8) !important;
+}
+
+.adventures-current-list {
+  margin-top: 0 !important;
+}
+
+.swipeout-content .item-media {
+  margin-right: 16px;
 }
