--- a/www/scss/partials/_matrix.scss
+++ b/www/scss/partials/_matrix.scss
@@ -8,7 +8,7 @@
   mix-blend-mode: screen;
   pointer-events: none;
   position: absolute;
-  top: 0;
+  top: 44px;
   width: 100%;
 }
 
@@ -17,7 +17,8 @@
 }
 
 .page-content .timeline {
-  margin: 0;
+  margin: 0 !important;
+  padding-top: 10px;
   background: $white;
 }
 
@@ -28,13 +29,9 @@
 }
 
 #week-list {
-  margin-top: 16px;
-
   .block-title {
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 16px;
-    margin-left: 16px;
+    padding: 16px 16px 16px 24px;
+    margin: 0;
     overflow: visible;
     font-size: 18px;
     color: $black;
